--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/BlogHeader/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/BlogHeader/Index.cshtml
@@ -33,7 +33,7 @@
                     <img width="200" height="150" src="~/images/blogHeader/@item.Image" alt="Alternate Text" />
                 </td>
                 <td>@Html.Raw(item.header)</td>
-                <td>@item.Description</td>
+                <td>@Html.Raw(item.Description)</td>
 
                 <td>
                     <a href="/Admin/BlogHeader/Edit/@item.Id" style="color:red"><i class="fas fa-edit"></i></a>
