--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Service/Create.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Service/Create.cshtml
@@ -11,7 +11,7 @@
 
     <div class="mb-3">
         <label>Header</label>
-        <input type="text" class="form-control" asp-for="Header">
+        <textarea asp-for="Header" class="form-control"></textarea>
         <span asp-validation-for="Header" style="color:red"></span>
     </div>
     <div class="mb-3">
@@ -39,3 +39,28 @@
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+
+@section scripts{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Description')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+
+
+@section scripts{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Header')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
