--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Slider/Create.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Slider/Create.cshtml
@@ -16,7 +16,7 @@
 
     <div class="mb-3">
         <label>Name</label>
-        <input type="text" class="form-control" asp-for="Name">
+        <textarea asp-for="Name" id="Name" class="form-control"></textarea>
         <span asp-validation-for="Name" style="color:red"></span>
     </div>
 
@@ -28,3 +28,28 @@
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+
+
+@section scripts1{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Description')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+
+@section scriptsNumOne{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Name')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
