--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Category/Create.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Category/Create.cshtml
@@ -14,22 +14,59 @@
         <span asp-validation-for="Photo" style="color:red"></span>
     </div>
 
-    <div class="mb-3">
+    <div class="form-group">
         <label>Name</label>
-        <input type="text" class="form-control" asp-for="Name">
-        <span asp-validation-for="Name" style="color:red"></span>
+        <textarea asp-for="Name" id="Name" class="form-control"></textarea>
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
-    <div class="mb-3">
+    <div class="form-group">
         <label>Company</label>
-        <input type="text" class="form-control" asp-for="Company">
-        <span asp-validation-for="Company" style="color:red"></span>
+        <textarea asp-for="Company" id="Company" class="form-control"></textarea>
+        <span asp-validation-for="Company" class="text-danger"></span>
     </div>
-    <div class="mb-3">
+    <div class="form-group">
         <label>Description</label>
-        <textarea asp-for="Description" class="form-control"></textarea>
-        <span asp-validation-for="Description" style="color:red"></span>
+        <textarea asp-for="Description" id="Description" class="form-control"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+
+
+
+@section scripts{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Name')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+@section scripts1{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Company')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+
+@section scriptsNumOne{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Description')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
