--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Category/Edit.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Category/Edit.cshtml
@@ -15,20 +15,56 @@
         <input type="hidden" name="Image" value="@Model.Image" />
     </div>
     <div class="form-group">
-        <label>Trendword</label>
+        <label>Name</label>
         <textarea asp-for="Name" id="Name" class="form-control"></textarea>
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label>Company</label>
-        <textarea asp-for="Company" id="Name" class="form-control"></textarea>
+        <textarea asp-for="Company" id="Company" class="form-control"></textarea>
         <span asp-validation-for="Company" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label>ClothType</label>
-        <input asp-for="Description" class="form-control" />
+        <label>Description</label>
+        <textarea asp-for="Description" id="Description" class="form-control"></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <input type="submit" class="btn btn-danger btn-block" value="Update" />
 </form>
+
+
+
+@section scripts{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Name')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+@section scripts1{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Company')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+
+@section scriptsNumOne{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Description')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
