--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Category/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Category/Index.cshtml
@@ -34,8 +34,8 @@
                     <img width="200" height="150" src="~/images/testimonials/@item.Image" alt="Alternate Text" />
                 </td>
                 <td>@Html.Raw(item.Name)</td>
-                <td>@item.Company</td>
-                <td>@item.Description</td>
+                <td>@Html.Raw(item.Company)</td>
+                <td>@Html.Raw(item.Description)</td>
                 <td>
                     <a href="/Admin/Category/Edit/@item.Id" style="color:red"><i class="fas fa-edit"></i></a>
                     <a href="/Admin/Category/Delete/@item.Id" onclick="return confirm('Silmek isdediyinizden eminsinizmi?')" style="color:red"><i class="fas fa-trash-alt"></i></a>
