--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/News/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/News/Index.cshtml
@@ -38,12 +38,12 @@
                     <img width="200" height="150" src="~/images/blog/@item.Image" alt="Alternate Text" />
                 </td>
                 <td>@item.Dates</td>
-                <td>@item.ButtonOnetext</td>
+                <td>@Html.Raw(item.ButtonOnetext)</td>
                 <td>@item.ButtonOneLink</td>
-                <td>@item.ButtonTwotext</td>
+                <td>@Html.Raw(item.ButtonTwotext)</td>
                 <td>@item.ButtonTwoLink</td>
-                <td>@item.Title</td>
-                <td>@item.Description</td>
+                <td>@Html.Raw(item.Title)</td>
+                <td>@Html.Raw(item.Description)</td>
                 <td>
                     <a href="/Admin/News/Edit/@item.Id" style="color:red"><i class="fas fa-edit"></i></a>
                     <a href="/Admin/News/Delete/@item.Id" onclick="return confirm('Silmek isdediyinizden eminsinizmi?')" style="color:red"><i class="fas fa-trash-alt"></i></a>
