--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/OurAbout/Create.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/OurAbout/Create.cshtml
@@ -21,7 +21,7 @@
     </div>
     <div class="mb-3">
         <label>Price</label>
-        <input type="text" class="form-control" asp-for="Price">
+        <textarea asp-for="Price" id="Price" class="form-control"></textarea>
         <span asp-validation-for="Price" style="color:red"></span>
     </div>
     <div class="mb-3">
@@ -31,13 +31,15 @@
     </div>
     <div class="mb-3">
         <label>Description</label>
-        <input type="text" class="form-control" asp-for="Description">
+        <textarea asp-for="Description" id="Description" class="form-control"></textarea>
+
         <span asp-validation-for="Description" style="color:red"></span>
     </div>
 
     <div class="mb-3">
         <label>Description Two</label>
-        <input type="text" class="form-control" asp-for="Description2">
+        <textarea asp-for="Description2" id="Description2" class="form-control"></textarea>
+
         <span asp-validation-for="Description2" style="color:red"></span>
     </div>
 
@@ -48,3 +50,40 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+
+
+
+@section scripts{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Price')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+@section scripts1{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Description')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+
+@section scriptsNumOne{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Description2')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
