--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageContact/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageContact/Index.cshtml
@@ -31,8 +31,8 @@
         {
             <tr>
                 <th scope="row">@item.Id</th>
-                <th scope="row">@item.Header</th>
-                <th scope="row">@item.Title</th>
+                <th scope="row">@Html.Raw(item.Header)</th>
+                <th scope="row">@Html.Raw(item.Title)</th>
                 <td>@Html.Raw(item.Link)</td>
                 <td>@Html.Raw(item.LinkDescription)</td>
                 <td>@item.Description</td>
@@ -40,7 +40,6 @@
                     <a href="/Admin/PageContact/Edit/@item.Id" style="color:red"><i class="fas fa-edit"></i></a>
                     <a href="/Admin/PageContact/Delete/@item.Id" onclick="return confirm('Silmek isdediyinizden eminsinizmi?')" style="color:red"><i class="fas fa-trash-alt"></i></a>
                     <br />
-                    <a href="/Admin/PageContact/Details/@item.Id" style="color:red">Etrafli</a>
                 </td>
             </tr>
 
