--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageSlider/Create.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageSlider/Create.cshtml
@@ -8,11 +8,12 @@
 </style>
 }
 <form method="post" enctype="multipart/form-data">
-    
+
 
     <div class="mb-3">
         <label>Name</label>
-        <input type="text" class="form-control" asp-for="Name">
+        <textarea asp-for="Name" class="form-control"></textarea>
+
         <span asp-validation-for="Name" style="color:red"></span>
     </div>
 
@@ -24,3 +25,27 @@
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+
+@section scripts1{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Description')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+
+@section scriptsNumOne{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Name')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
