--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageSlider/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PageSlider/Index.cshtml
@@ -26,7 +26,7 @@
             <tr>
                 <th scope="row">@item.Id</th>
                 <td>@Html.Raw(item.Name)</td>
-                <td>@item.Description</td>
+                <td>@Html.Raw(item.Description)</td>
 
                 <td>
                     <a href="/Admin/PageSlider/Edit/@item.Id" style="color:red"><i class="fas fa-edit"></i></a>
