--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PracticeAbout/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PracticeAbout/Index.cshtml
@@ -32,9 +32,9 @@
             <tr>
                 <th scope="row">@item.Id</th>
                 <td>@Html.Raw(item.IconLink)</td>
-                <td>@item.Header</td>
-                <td>@item.Description</td>
-                <td>@item.Learntext</td>
+                <td>@Html.Raw(item.Header)</td>
+                <td>@Html.Raw(item.Description)</td>
+                <td>@Html.Raw(item.Learntext)</td>
                 <td>@item.LearnLink</td>
 
                 <td>
