--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PracticeSlider/Edit.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PracticeSlider/Edit.cshtml
@@ -1,19 +1,43 @@
-﻿@model PracticeSlider 
+﻿@model PracticeSlider
 @{
     ViewData["Title"] = "Edit";
 }
 <form method="post" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label>Trendword</label>
+        <label>Name</label>
         <textarea asp-for="Name" id="Name" class="form-control"></textarea>
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label>ClothType</label>
-        <input asp-for="Description" class="form-control" />
+        <textarea asp-for="Description" id="Description" class="form-control"></textarea>
+
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <input type="submit" class="btn btn-danger btn-block" value="Update" />
 </form>
 
+
+
+@section scripts{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Name')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+@section scripts1{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Description')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
