--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Practise/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Practise/Index.cshtml
@@ -30,7 +30,7 @@
                 <th scope="row">@item.Id</th>
                 
                 <td>@Html.Raw(item.Link)</td>
-                <td>@item.Description</td>
+                <td>@Html.Raw(item.Description)</td>
                 <td>
                     <a href="/Admin/Practise/Edit/@item.Id" style="color:red"><i class="fas fa-edit"></i></a>
                     <a href="/Admin/Practise/Delete/@item.Id" onclick="return confirm('Silmek isdediyinizden eminsinizmi?')" style="color:red"><i class="fas fa-trash-alt"></i></a>
