--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Service/Edit.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Service/Edit.cshtml
@@ -5,7 +5,8 @@
 <form method="post" enctype="multipart/form-data">
     <div class="mb-3">
         <label>Header</label>
-        <input type="text" class="form-control" asp-for="Header">
+        <textarea asp-for="Header" class="form-control"></textarea>
+
         <span asp-validation-for="Header" style="color:red"></span>
     </div>
     <div class="mb-3">
@@ -38,8 +39,21 @@
     <partial name="_ValidationScriptsPartial" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
     <script>
-    ClassicEditor.create(document.querySelector('#Name')).catch(error => {
-        console.error(error);
-    });
+        ClassicEditor.create(document.querySelector('#Description')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+
+
+@section scripts{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Header')).catch(error => {
+            console.error(error);
+        });
     </script>
 }
