--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Service/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Service/Index.cshtml
@@ -31,9 +31,9 @@
         {
             <tr>
                 <th scope="row">@item.Id</th>
-                <td>@item.Header</td>
+                <td>@Html.Raw(item.Header)</td>
                 <td>@item.Title</td>
-                <td>@item.Description</td>
+                <td>@Html.Raw(item.Description)</td>
                 <td>@item.Buttontext</td>
                 <td>@item.ButtonLink</td>
 
