--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -63,14 +63,20 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseTwo"
                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                    <i class="fas fa-home"></i>
+                    <span>Home Page</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="~/admin/buttons.html">Buttons</a>
-                        <a class="collapse-item" href="~/admin/cards.html">Cards</a>
+                        <a class="collapse-item" href="~/admin/Slider/Index">Home Slider</a>
+                        <a class="collapse-item" href="~/admin/OurAbout/Index">Home Our About</a>
+                        <a class="collapse-item" href="~/admin/Practise/Index">Practise Areas</a>
+                        <a class="collapse-item" href="~/admin/About/Index">Home About</a>
+                        <a class="collapse-item" href="~/admin/AttorneysBio/Index">Home Team</a>
+                        <a class="collapse-item" href="~/admin/category/Index">Home Category</a>
+                        <a class="collapse-item" href="~/admin/blog/Index">Home Blog</a>
+                        <a class="collapse-item" href="~/admin/Service/Index">Home Service</a>
                     </div>
                 </div>
             </li>
@@ -79,17 +85,68 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities"
                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Utilities</span>
+                    <i class="far fa-file"></i>
+                    <span>Pages</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="~/admin/utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="~/admin/utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="~/admin/utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="~/admin/utilities-other.html">Other</a>
+                        <a class="collapse-item" href="~/admin/PageSlider/Index">Page Slider</a>
+                        <a class="collapse-item" href="~/admin/category/Index">Page category</a>
+                        <a class="collapse-item" href="~/admin/PageContact/Index">Page Contact</a>
+
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities1"
+                   aria-expanded="true" aria-controls="collapseUtilities1">
+                    <i class="fab fa-app-store"></i>
+                    <span>Practice Areas</span>
+                </a>
+                <div id="collapseUtilities1" class="collapse" aria-labelledby="headingUtilities"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Utilities:</h6>
+                        <a class="collapse-item" href="~/admin/PracticeSlider/Index">Practice Slider</a>
+                        <a class="collapse-item" href="~/admin/PracticeAbout/Index">Practice category</a>
+                        <a class="collapse-item" href="~/admin/PageContact/Index">Page Contact</a>
+
+                    </div>
+                </div>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities2"
+                   aria-expanded="true" aria-controls="collapseUtilities2">
+                    <i class="fab fa-app-store"></i>
+                    <span>Attorneys</span>
+                </a>
+                <div id="collapseUtilities2" class="collapse" aria-labelledby="headingUtilities"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Utilities:</h6>
+                        <a class="collapse-item" href="~/admin/AttorneysSlider/Index">Attorneys Slider</a>
+                        <a class="collapse-item" href="~/admin/AttorneysWork/Index">Attorneys Work</a>
+                        <a class="collapse-item" href="~/admin/AttorneysLogo/Index">Attorneys Logo</a>
+
+                    </div>
+                </div>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities3"
+                   aria-expanded="true" aria-controls="collapseUtilities3">
+                    <i class="fab fa-app-store"></i>
+                    <span>Blog</span>
+                </a>
+                <div id="collapseUtilities3" class="collapse" aria-labelledby="headingUtilities"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Utilities:</h6>
+                        <a class="collapse-item" href="~/admin/BlogHeader/Index">Blog Header</a>
+                        <a class="collapse-item" href="~/admin/Blog/Index">blog Details</a>
                     </div>
                 </div>
             </li>
